# diskwatcher-rs

./: .gitignore  Cargo.toml  README.md  diskwatch.db
dirtest/: 2.txt
src/: db.rs  main.rs  utils.rs
test/aa/: fasfa
testdir/subdir/: 3.txt  5.txt
