[package]
name = "diskwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "^2.3"
sqlite = "0.26.0"
rust-crypto = "^0.2"
clap = { version = "^3.1", features = ["derive"] }
ctrlc = { version = "^3.2", features = ["termination"] }
chrono = "^0.4"
