[package]
name = "diskwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "^2"
rusqlite = { version = "^0", features = ["bundled", "chrono"] }
rust-crypto = "^0"
clap = { version = "^4", features = ["derive"] }
chrono = "^0"
